Form created , post functionality done!

--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -1,3 +1,7 @@
 .form-container {
   background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
