--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=IBM+Plex+Sans+Arabic:wght@200&display=swap');
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,13 +11,36 @@
   min-height: 100vh;
 }
 
+@media (min-width: 768px) {
+  .app-container {
+    margin-top: 3rem;
+  }
+}
+
 .dark {
   transition: all .4s ease-in-out;
   color: white;
-  background-color: hsla(189, 100%, 12%, 1)
+  background-color: hsla(189, 100%, 12%, 1);
 }
+
 .link {
   color: #e28743;
 }
 
-/*#e28743*/
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Concert One', cursive;
+}
+
+p,
+a,
+input, button {
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
+
+}
