--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=IBM+Plex+Sans+Arabic:wght@200&display=swap');
 
 
 nav {
@@ -18,6 +19,19 @@ nav {
     justify-content: center;
     flex-direction: column;
 }
+
+
+.nav-wrapper ul {
+    list-style-type: none;
+}
+
+
+.nav-wrapper ul li .link {
+    text-decoration: none;
+    font-family: 'Concert One', cursive;
+    font-size: 3rem;
+}
+
 
 .active {
     left: 0;
@@ -42,8 +56,35 @@ nav {
 
 @media (min-width: 768px) {
     nav {
+        left: 0;
+        top: 0;
         width: 100%;
+        height: 50px;
         justify-content: space-between;
-
     }
+    
+    .nav-wrapper {
+        max-width: 1200px;
+        margin: 0 auto;
+        height: 50px;
+        flex-direction: row;
+        justify-content: space-between;
+        border-bottom: 1px solid;
+    }
+
+
+    .menu-toggle {
+        display: none;
+    }
+
+    .nav-wrapper ul {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .nav-wrapper ul li .link {
+        font-size: 1.2rem;
+        margin: 0 1rem;
+    }
+    
 }
