--- a/client/src/components/RecipeList/RecipeList.css
+++ b/client/src/components/RecipeList/RecipeList.css
@@ -9,12 +9,58 @@
     grid-gap: 1rem;
   }
 }
-.recipeList-container .card {
-  border: 1px solid;
-  margin-bottom: 1rem;
-}
 
 .recipeList-container .card .card-header img {
   width: 100%;
 }
 
+.card {
+  margin-bottom: 1rem;
+}
+
+.card:hover {
+  transition: all .4s ease-in-out;
+  transform: scale(1.01);
+}
+
+.card-content {
+  box-shadow: 10px 10px 14px 0px rgba(143,138,138,0.75);
+  text-align: center;
+}
+
+.card-title h1{
+  padding: 1rem;
+}
+
+.time-datas {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.recipe-data {
+  margin: .5rem;
+  padding: 1rem;
+}
+
+.recipe-data span {
+  color: #FD841F;
+  font-weight: bolder;
+}
+
+.card-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.recipe-icon {
+  position: relative;
+  top: 5px
+}
+
+.card-btn {
+  background: none;
+  border: none;
+  margin: .5rem;
+}
