--- a/client/src/components/RecipeSingle/RecipeSingle.css
+++ b/client/src/components/RecipeSingle/RecipeSingle.css
@@ -1,3 +1,7 @@
+h1 {
+  margin: .5rem;
+}
+
 .recipe-single-container {
   min-height: 100vh;
   color: black;
@@ -88,6 +92,11 @@
 
 .recipe-single-comment {
   min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem;
 }
 
 .dark {
