--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -2,6 +2,10 @@
   padding: 1rem;
 }
 
+.form-container h3 {
+  margin-bottom: .3rem;
+}
+
 .form-container .form-header {
   text-align: center;
   margin: 2rem;
