--- a/client/src/components/RecipeSingle/RecipeSingle.css
+++ b/client/src/components/RecipeSingle/RecipeSingle.css
@@ -1,7 +1,3 @@
-h1 {
-  margin: .5rem;
-}
-
 .recipe-single-container {
   min-height: 100vh;
   color: black;
@@ -12,12 +8,14 @@ h1 {
   width: 100%;
 }
 
+
+
 .recipe-single-content {
   min-height: 500px;
   border-radius: 15px;
 }
 
-.recipe-single-content .recipe-title {
+.recipe-single-content .title {
   text-align: center;
   padding: 1rem;
 }
@@ -28,6 +26,10 @@ h1 {
   z-index: 98;
   border-radius: 15px;
   min-height: 500px;
+}
+
+.recipe-single-body h5 {
+  margin: .6rem;
 }
 
 .recipe-time {
@@ -51,11 +53,12 @@ h1 {
 }
 
 .recipe-single-ingredients {
-  box-shadow: -2px 4px 46px 0px rgba(110,110,110,0.75);
+  box-shadow: -2px 4px 46px 0px rgba(110, 110, 110, 0.75);
 
 }
 
-.recipe-single-ingredients, .recipe-single-step {
+.recipe-single-ingredients,
+.recipe-single-step {
   border-radius: 15px;
   padding: .5rem;
   margin: 1rem 0 3rem 0
@@ -99,8 +102,26 @@ h1 {
   padding: 2rem;
 }
 
+.recipe-single-comment h1 {
+  margin: 2rem;
+}
+
 .dark {
   transition: all .4s ease-in-out;
   color: white;
   background-color: hsla(189, 100%, 12%, 1)
+}
+
+
+@media (min-width: 768px) {
+  .recipe-single-image {
+    width: 40%;
+    margin: 0 auto;
+  }
+
+  .recipe-single-ingredients,
+  .recipe-single-step {
+    width: 60%;
+    margin: 3rem auto;
+  }
 }
