--- a/client/src/components/WelcomePage/WelcomePage.css
+++ b/client/src/components/WelcomePage/WelcomePage.css
@@ -3,6 +3,12 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  text-align: center;
+}
+
+.welcome {
+  font-size: 2rem;
+  margin: 4rem 0;
 }
 
 .welcome-page .link {
