--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,11 @@
   }
 }
 
+.dark {
+  transition: all .4s ease-in-out;
+  color: white;
+  background-color: hsla(189, 100%, 12%, 1)
+}
 
 .link {
   color: #e28743;
