--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -14,7 +14,7 @@
 .section-title {
   font-size: 1.5rem;
   margin: 2rem;
-  
+
 }
 
 /* LATEST-FIVE-STYLES */
@@ -24,19 +24,39 @@
 }
 
 .latest-card {
+  padding: 2rem;
   margin: .2rem;
-  box-shadow: 10px 10px 20px 0px rgba(161, 161, 161, 0.75);
+  box-shadow: 10px 10px 20px 0px rgba(59, 59, 59, 0.75);
 }
 
 .latest-card-title {
   font-size: 1.4rem;
   margin: 1rem;
+  text-align: center;
 }
 
-.latest-card-img img,
-.random-recipe-img img {
-  width: 100%;
+.latest-card-img {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.latest-card-img img {
+  width: 90%;
+  margin: 0 auto;
+}
+
+@media(min-width: 768px) {
+  .latest-card-img img {
+    max-width: 300px;
+    max-height: 400px;
+    margin: 0 auto;
+  }
+
+}
+
+
 
 
 .latest-time-datas {
@@ -57,7 +77,6 @@
 @media (min-width: 768px) {
   .latest-five-recipes-container {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
     grid-gap: .5rem;
   }
 
@@ -69,26 +88,49 @@
 
 /* RANDROM-RECIPE-STYLES */
 
+
+.random-recipe-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .random-recipe-body {
   background-color: rgb(240, 239, 239);
   color: black;
   position: relative;
   top: -1rem;
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   border-radius: 14px;
+  padding: 2rem;
+}
+
+.section-title {
+  text-align: center;
 }
 
 
 @media (min-width: 768px) {
   .random-recipe-body {
     top: -6rem;
-    width: 60%;
+    width: 500px;
+    padding: 1rem;
+    text-align: center;
   }
 
+  .random-recipe-container {
+    padding: 0 8rem;
+  }
 
+  
 }
 
+.random-recipe-img img {
+  margin: 0 auto;
+  max-width: 500px;
+  max-height: 500px;
+}
 
 
 /* HUNGARIAN-STYLES */
@@ -107,6 +149,7 @@
 @media (min-width: 768px) {
   .hungarian-recipes-container {
     display: grid;
+    grid-gap: 1rem;
     grid-template-columns: repeat(3, 1fr);
   }
 
