--- a/client/src/components/RatingStars/RatingStars.css
+++ b/client/src/components/RatingStars/RatingStars.css
@@ -3,6 +3,10 @@
   margin: 1rem;
 }
 
+.rating-stars-header h1  {
+  margin-bottom: 1.5rem;
+  font-size: 2rem
+}
 
 .rating-stars-container {
   position: fixed;
