--- a/client/src/components/RecipeSingle/RecipeSingle.css
+++ b/client/src/components/RecipeSingle/RecipeSingle.css
@@ -1,8 +1,9 @@
-.recipe-single-container {
+ .recipe-single-container {
   min-height: 100vh;
   color: black;
   background-color: white;
 }
+
 
 .recipe-single-image {
   height: 500px;
@@ -10,8 +11,14 @@
 }
 
 @media (min-width: 768px) {
+  
   .recipe-single-image {
     width: 50%;
+    margin: 0 auto;
+  }
+
+  .recipe-time {
+    width: 60%;
     margin: 0 auto;
   }
 }
@@ -81,10 +88,11 @@
 .recipe-single-ingredient {
   margin: 1rem;
   display: grid;
-  grid-template-columns: 20% 20% 20%;
+  grid-template-columns: 20% 20%;
   align-items: center;
   justify-content: center;
   text-align: center;
+  border: 1px solid rgb(197, 194, 194);
 }
 
 .recipe-single-ingredient-data {
@@ -98,6 +106,11 @@
   background-color: #FF731D;
   color: white;
   text-align: center;
+}
+
+.recipe-single-step:hover {
+  transition: all .4s ease-in-out;
+  transform: scale(1.01);
 }
 
 .step-index {
