--- a/client/src/components/RecipeSingle/RecipeSingle.css
+++ b/client/src/components/RecipeSingle/RecipeSingle.css
@@ -10,6 +10,11 @@
   width: 100%;
 }
 
+.recipe-single-userName {
+  text-align: center;
+  margin: 1.5rem;
+}
+
 @media (min-width: 768px) {
   
   .recipe-single-image {
