--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,6 +1,21 @@
-.login-button {
+.login-form {
+  text-align: center;
+}
+
+.login-form h1 {
+  margin: 5rem 0 2rem 0;
+}
+
+.login-form .login-button {
   color: white;
   padding: .5rem 1.5rem;
   border-radius: 6px;
-  background-color: rgb(70, 153, 62);
+  background-color: #46993e;
+  margin-top: 1rem;
 }
+
+.login-form .forgot-password {
+  position: relative;
+  top: .5rem;
+}
+/*# sourceMappingURL=Login.css.map */
