--- a/client/src/components/HomePage/HomePage.scss
+++ b/client/src/components/HomePage/HomePage.scss
@@ -4,7 +4,7 @@
   text-align: center;
 }
 
-.recipe-icon {
+.recipe-icon { 
   margin-left: .5rem;
 }
 
@@ -12,8 +12,9 @@
   text-decoration: none;
   color: black;
 }
-
 /*Home-Container-Styles*/
+
+
 .home-title {
   text-align: center;
   font-size: 6rem;
@@ -30,9 +31,12 @@
   
   }
 */
+
+
+
 /*LATEST-FIVE-RECIPES-STYLES*/
+
 .latest-five-recipes-container {
-  display: -ms-grid;
   display: grid;
   grid-gap: 1.5rem;
   margin: .5rem;
@@ -40,12 +44,12 @@
 
 @media (min-width: 768px) {
   .latest-five-recipes-container {
-    -ms-grid-columns: (1fr)[6];
-        grid-template-columns: repeat(6, 1fr);
-    -ms-grid-rows: minmax(400px, auto);
-        grid-template-rows: minmax(400px, auto);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: minmax(400px, auto);
   }
+
 }
+
 
 .latest-recipe-img {
   height: 300px;
@@ -53,10 +57,10 @@
 }
 
 .latest-five-recipe-card {
-  position: relative;
-  -webkit-box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
+ position: relative;
+  box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
 }
+
 
 .latest-recipe-content {
   padding: 1rem;
@@ -73,39 +77,37 @@
   font-weight: bolder;
 }
 
+
 .latest-recipe-view-btn {
   background-color: yellow;
   position: absolute;
   top: 0;
 }
 
-@media (min-width: 768px) {
+
+
+@media(min-width: 768px) {
   .latest-five-recipe-card:nth-child(1) {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 4;
     grid-column: 1 / span 4;
   }
+
   .latest-five-recipe-card:nth-child(2) {
-    -ms-grid-column: 5;
-    -ms-grid-column-span: 2;
     grid-column: 5 / 7;
   }
+
   .latest-five-recipe-card:nth-child(3) {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
     grid-column: 1 / 3;
   }
+
   .latest-five-recipe-card:nth-child(4) {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 2;
     grid-column: 3 / 5;
   }
+
   .latest-five-recipe-card:nth-child(5) {
-    -ms-grid-column: 5;
-    -ms-grid-column-span: 2;
     grid-column: 5 / 7;
   }
 }
+
 
 /* RANDOM-ONE-STYLES */
 .random-one-container {
@@ -113,7 +115,7 @@
 }
 
 .random-one-body {
-  background-color: #974141;
+  background-color: rgb(151, 65, 65);
   padding: 2rem;
   border-radius: 16px;
   margin: -2rem .5rem;
@@ -136,10 +138,13 @@
   margin: 0 auto;
 }
 
+
+
 @media (min-width: 1000px) {
   .random-one-body {
     width: 80%;
   }
+
   .random-one-img {
     height: 600px;
     width: 50%;
@@ -148,33 +153,26 @@
 }
 
 /* HUNGARIAN-FIVE-STYLES */
+
 .hungarian-five-container {
-  display: -ms-grid;
   display: grid;
   grid-gap: 1.5rem;
   margin: 7rem .5rem;
 }
 
 .hungarian-five-cards {
-  -webkit-box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
   position: relative;
 }
 
 .hungarian-five-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   font-size: 2rem;
 }
 
-.hungarian-five-header p {
+.hungarian-five-header p{
   text-align: center;
 }
 
@@ -209,12 +207,13 @@
 
 @media (min-width: 768px) {
   .hungarian-five-container {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
+
 /* FAST-FOOD-STYLES */
+
 .fast-recipes-container {
   margin: .5rem;
 }
@@ -233,15 +232,13 @@
 }
 
 .fast-recipes-cards {
-  display: -ms-grid;
   display: grid;
   grid-gap: 1.5rem;
 }
 
 .fast-recipes-card {
   position: relative;
-  -webkit-box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
 .fast-recipes-card-content, .fast-recipes-card-title {
@@ -257,8 +254,7 @@
   position: absolute;
   bottom: 10px;
   left: 50%;
-  -webkit-transform: translate(-50%);
-          transform: translate(-50%);
+  transform: translate(-50%);
 }
 
 .fast-recipes-card-img {
@@ -270,14 +266,13 @@
   top: 0;
 }
 
-@media (min-width: 768px) {
+@media(min-width: 768px) {
   .fast-recipes-cards {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
+
 
 .helo {
   height: 500px;
 }
-/*# sourceMappingURL=HomePage.css.map */
