--- a/client/src/components/HomePage/HomePage.scss
+++ b/client/src/components/HomePage/HomePage.scss
@@ -4,16 +4,16 @@
   text-align: center;
 }
 
-.recipe-icon { 
-  margin-left: .5rem;
+.recipe-icon {
+  margin-left: 0.5rem;
 }
 
 .homepage-link {
   text-decoration: none;
   color: black;
 }
-/*Home-Container-Styles*/
 
+/*Home-Container-Styles*/
 
 .home-title {
   text-align: center;
@@ -24,255 +24,220 @@
 
 .home-container {
   height: 100%;
-}
 
-/*
-  @media (min-width: 768px) {
-  
-  }
-*/
+  /*LATEST-FIVE-RECIPES-STYLES*/
 
-
-
-/*LATEST-FIVE-RECIPES-STYLES*/
-
-.latest-five-recipes-container {
-  display: grid;
-  grid-gap: 1.5rem;
-  margin: .5rem;
-}
-
-@media (min-width: 768px) {
   .latest-five-recipes-container {
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: minmax(400px, auto);
+    display: grid;
+    grid-gap: 1.5rem;
+    margin: 0.5rem;
+
+    .latest-five-recipe-card {
+      position: relative;
+      box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
+
+      .homepage-link {
+        .latest-recipe-header {
+          .latest-recipe-img {
+            height: 300px;
+            width: 100%;
+          }
+        }
+
+        .latest-recipe-body {
+          .latest-recipe-title {
+            h1 {
+              font-size: 1.5rem;
+              margin: 0.5rem;
+              text-align: center;
+            }
+          }
+
+          .latest-recipe-content {
+            padding: 1rem;
+            text-align: center;
+
+            .latest-recipe-content p {
+              font-weight: bolder;
+            }
+          }
+        }
+      }
+    }
+
+    @media (min-width: 768px) {
+      .latest-five-recipe-card:nth-child(1) {
+        grid-column: 1 / span 4;
+      }
+
+      .latest-five-recipe-card:nth-child(2) {
+        grid-column: 5 / 7;
+      }
+
+      .latest-five-recipe-card:nth-child(3) {
+        grid-column: 1 / 3;
+      }
+
+      .latest-five-recipe-card:nth-child(4) {
+        grid-column: 3 / 5;
+      }
+
+      .latest-five-recipe-card:nth-child(5) {
+        grid-column: 5 / 7;
+      }
+    }
   }
 
-}
-
-
-.latest-recipe-img {
-  height: 300px;
-  width: 100%;
-}
-
-.latest-five-recipe-card {
- position: relative;
-  box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
-}
-
-
-.latest-recipe-content {
-  padding: 1rem;
-  text-align: center;
-}
-
-.latest-recipe-body h1 {
-  font-size: 1.5rem;
-  margin: .5rem;
-  text-align: center;
-}
-
-.latest-recipe-content p {
-  font-weight: bolder;
-}
-
-
-.latest-recipe-view-btn {
-  background-color: yellow;
-  position: absolute;
-  top: 0;
-}
-
-
-
-@media(min-width: 768px) {
-  .latest-five-recipe-card:nth-child(1) {
-    grid-column: 1 / span 4;
+  @media (min-width: 768px) {
+    .latest-five-recipes-container {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: minmax(400px, auto);
+    }
   }
 
-  .latest-five-recipe-card:nth-child(2) {
-    grid-column: 5 / 7;
+  /* RANDOM-ONE-STYLES */
+
+  .random-one-container {
+    margin-top: 5rem;
+
+    .random-one-body {
+      background-color: rgb(151, 65, 65);
+      padding: 2rem;
+      border-radius: 16px;
+      margin: -2rem 0.5rem;
+      width: 100%;
+      color: white;
+
+      .random-one-card-title {
+        margin-bottom: 1rem;
+        font-size: 3rem;
+
+        .random-one-card-content {
+          font-size: 1.4rem;
+        }
+      }
+    }
   }
 
-  .latest-five-recipe-card:nth-child(3) {
-    grid-column: 1 / 3;
+  @media (min-width: 1000px) {
+    .random-one-body {
+      width: 80%;
+    }
+
+    .random-one-img {
+      height: 600px;
+      width: 50%;
+      margin: 0 5rem;
+    }
   }
 
-  .latest-five-recipe-card:nth-child(4) {
-    grid-column: 3 / 5;
-  }
+  /* HUNGARIAN-FIVE-STYLES */
 
-  .latest-five-recipe-card:nth-child(5) {
-    grid-column: 5 / 7;
-  }
-}
-
-
-/* RANDOM-ONE-STYLES */
-.random-one-container {
-  margin-top: 5rem;
-}
-
-.random-one-body {
-  background-color: rgb(151, 65, 65);
-  padding: 2rem;
-  border-radius: 16px;
-  margin: -2rem .5rem;
-  width: 100%;
-  color: white;
-}
-
-.random-one-card-title {
-  margin-bottom: 1rem;
-  font-size: 3rem;
-}
-
-.random-one-card-content {
-  font-size: 1.4rem;
-}
-
-.random-one-img {
-  height: 400px;
-  width: 95%;
-  margin: 0 auto;
-}
-
-
-
-@media (min-width: 1000px) {
-  .random-one-body {
-    width: 80%;
-  }
-
-  .random-one-img {
-    height: 600px;
-    width: 50%;
-    margin: 0 5rem;
-  }
-}
-
-/* HUNGARIAN-FIVE-STYLES */
-
-.hungarian-five-container {
-  display: grid;
-  grid-gap: 1.5rem;
-  margin: 7rem .5rem;
-}
-
-.hungarian-five-cards {
-  box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
-  position: relative;
-}
-
-.hungarian-five-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2rem;
-}
-
-.hungarian-five-header p{
-  text-align: center;
-}
-
-.hungarian-card-img {
-  height: 250px;
-}
-
-.hungarian-card-title h1 {
-  font-size: 1.7rem;
-  margin-bottom: 3rem;
-  text-align: center;
-}
-
-.hungarian-card-title,
-.hungarian-card-content {
-  text-align: center;
-  padding: 1rem;
-}
-
-.hungarian-card-content {
-  position: absolute;
-  bottom: 10px;
-  text-align: center;
-  width: 100%;
-}
-
-.hungarian-five-view-btn {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-@media (min-width: 768px) {
   .hungarian-five-container {
-    grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    grid-gap: 1.5rem;
+    margin: 7rem 0.5rem;
+
+    .hungarian-five-header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2rem;
+
+      .hungarian-five-title {
+        p {
+          text-align: center;
+        }
+      }
+    }
+
+    .hungarian-five-cards {
+      box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
+      position: relative;
+
+      .hungarian-card-img {
+        height: 250px;
+      }
+
+      .hungarian-card-body {
+        .hungarian-card-title {
+          h1 {
+            font-size: 1.7rem;
+            margin-bottom: 3rem;
+            text-align: center;
+          }
+        }
+        .hungarian-card-content {
+          position: absolute;
+          bottom: 10px;
+          text-align: center;
+          width: 100%;
+        }
+      }
+    }
   }
-}
 
-
-/* FAST-FOOD-STYLES */
-
-.fast-recipes-container {
-  margin: .5rem;
-}
-
-.fast-recipes-title {
-  text-align: center;
-  margin: 5rem;
-}
-
-.fast-recipes-title h1 {
-  font-size: 4rem;
-}
-
-.fast-recipes-title p {
-  font-size: 1.5rem;
-}
-
-.fast-recipes-cards {
-  display: grid;
-  grid-gap: 1.5rem;
-}
-
-.fast-recipes-card {
-  position: relative;
-  box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
-}
-
-.fast-recipes-card-content, .fast-recipes-card-title {
-  text-align: center;
-  width: 100%;
-}
-
-.fast-recipes-card-title {
-  margin-bottom: 4rem;
-}
-
-.fast-recipes-card-content {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translate(-50%);
-}
-
-.fast-recipes-card-img {
-  height: 400px;
-}
-
-.fast-recipes-view-btn {
-  position: absolute;
-  top: 0;
-}
-
-@media(min-width: 768px) {
-  .fast-recipes-cards {
-    grid-template-columns: repeat(3, 1fr);
+  @media (min-width: 768px) {
+    .hungarian-five-container {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
-}
 
+  /* FAST-FOOD-STYLES */
 
-.helo {
-  height: 500px;
+  .fast-recipes-container {
+    margin: 0.5rem;
+
+    .fast-recipes-header {
+      .fast-recipes-title {
+        text-align: center;
+        margin: 5rem;
+
+        h1 {
+          font-size: 3.5rem;
+        }
+
+        p {
+          font-size: 1.5rem;
+        }
+      }
+    }
+
+    .fast-recipes-cards {
+      display: grid;
+      grid-gap: 1.5rem;
+      .fast-recipes-card {
+        position: relative;
+        box-shadow: 3px 8px 11px 0px rgba(0, 0, 0, 0.75);
+      }
+
+      .homepage-link {
+        .fast-recipes-card-img {
+          height: 400px;
+        }
+
+        .fast-recipes-card-body {
+          .fast-recipes-card-title {
+            text-align: center;
+            width: 100%;
+            margin-bottom: 4rem;
+          }
+
+          .fast-recipes-card-content {
+            text-align: center;
+            width: 100%;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translate(-50%);
+          }
+        }
+      }
+    }
+    @media (min-width: 768px) {
+      .fast-recipes-cards {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+  }
 }
