--- a/client/src/components/RecipeList/RecipeList.css
+++ b/client/src/components/RecipeList/RecipeList.css
@@ -1,72 +1,89 @@
-.recipeList{
-  grid-template-columns: repeat(3, 1fr);
-  padding: 1rem;
-}
-
-.recipeList-welcome {
+.recipeList-container .recipeList-welcome {
   text-align: center;
   margin: 7rem 2rem;
 }
 
+.recipeList-container .recipeList {
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  padding: 1rem;
+}
+
+.recipeList-container .recipeList .card {
+  margin-bottom: 1rem;
+  -webkit-box-shadow: 10px 10px 14px 0px rgba(143, 138, 138, 0.75);
+          box-shadow: 10px 10px 14px 0px rgba(143, 138, 138, 0.75);
+}
+
+.recipeList-container .recipeList .card .card-header {
+  height: 300px;
+}
+
+.recipeList-container .recipeList .card .card-content {
+  text-align: center;
+}
+
+.recipeList-container .recipeList .card .card-content .card-body .card-title h3 {
+  padding: 1rem;
+}
+
+.recipeList-container .recipeList .card .card-content .card-body .time-datas {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.recipeList-container .recipeList .card .card-content .card-body .time-datas .recipe-data {
+  margin: 0.5rem;
+  padding: 1rem;
+}
+
+.recipeList-container .recipeList .card .card-content .card-body .time-datas .recipe-data .recipe-icon {
+  position: relative;
+  top: 5px;
+}
+
+.recipeList-container .recipeList .card .card-content .card-body .time-datas .recipe-data span {
+  color: #fd841f;
+  font-weight: bolder;
+}
+
+.recipeList-container .recipeList .card .card-content .card-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.recipeList-container .recipeList .card .card-content .card-footer .card-btn {
+  background: none;
+  border: none;
+  margin: 0.5rem;
+}
+
+.recipeList-container .recipeList:hover {
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+}
+
 @media (min-width: 768px) {
-  .recipeList {
+  .recipeList-container .recipeList {
+    display: -ms-grid;
     display: grid;
     grid-gap: 1rem;
   }
 }
-
-.recipeList .card .card-header {
-  height: 300px
-}
-
-
-.card {
-  margin-bottom: 1rem;
-  box-shadow: 10px 10px 14px 0px rgba(143,138,138,0.75);
-}
-
-.card:hover {
-  transition: all .4s ease-in-out;
-  transform: scale(1.01);
-}
-
-.card-content {
-  text-align: center;
-}
-
-.card-title h3{
-  padding: 1rem;
-}
-
-.time-datas {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.recipe-data {
-  margin: .5rem;
-  padding: 1rem;
-}
-
-.recipe-data span {
-  color: #FD841F;
-  font-weight: bolder;
-}
-
-.card-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.recipe-icon {
-  position: relative;
-  top: 5px
-}
-
-.card-btn {
-  background: none;
-  border: none;
-  margin: .5rem;
-}
+/*# sourceMappingURL=RecipeList.css.map */
