--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -1,9 +1,17 @@
-.form-container {
-  padding: 1rem;
+input:focus {
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  padding: 0.4rem;
 }
 
-.form-container h3 {
-  margin-bottom: .3rem;
+input {
+  width: 80%;
+  margin: 0.4rem;
+  padding: 0.2rem;
+}
+
+.form-container {
+  padding: 1rem;
 }
 
 .form-container .form-header {
@@ -11,88 +19,92 @@
   margin: 2rem;
 }
 
-#title {
+.form-container h3 {
+  margin-bottom: 0.3rem;
+}
+
+.form-container .title {
   width: 90%;
 }
 
-input:focus {
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
-  padding: .4rem;
-}
-
-input {
-  width: 80%;
-  margin: .4rem;
-  padding: .2rem;
-}
-
-.file {
-  width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 2rem;
-}
-
-select {
-  padding: .2rem;
-  margin: .1rem;
-}
-
-button {
-  cursor: pointer;
-}
-
-.form-delete-btn {
-  background: none;
-  border: none;
-  position: relative;
-  top: 5px;
-  color: #FF6464;
-}
-
-.add-btn {
-  color: #2192FF;
-  font-weight: bolder;
-  background: none;
-  border: none;
-  margin: .5rem;
-}
-
-.ingredients,
-.steps {
+.form-container .ingredients,
+.form-container .steps {
   margin: 1rem 0;
 }
 
-.ingredient-input {
+.form-container .ingredients .ingredient-input {
   width: 35%;
-  margin: .2rem;
-  padding: .2rem;
+  margin: 0.2rem;
+  padding: 0.2rem;
 }
 
-#prepTime {
+.form-container #prepTime {
   width: 90%;
 }
 
-#cookTime {
+.form-container select {
+  padding: 0.2rem;
+  margin: 0.1rem;
+}
+
+.form-container #cookTime {
   width: 90%;
 }
 
-textarea {
+.form-container textarea {
   width: 100%;
   margin-top: 1rem;
 }
 
-.send {
+.form-container .file {
+  width: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 2rem;
+}
+
+.form-container .add-btn {
+  color: #2192ff;
+  font-weight: bolder;
+  background: none;
+  border: none;
+  margin: 0.5rem;
+}
+
+.form-container button {
+  cursor: pointer;
+}
+
+.form-container .form-delete-btn {
+  background: none;
+  border: none;
+  position: relative;
+  top: 5px;
+  color: #ff6464;
+}
+
+.form-container .send {
   width: 100%;
   text-align: center;
   margin: 1rem 0;
 }
 
-.send-button {
+.form-container .send .send-button {
   background-color: #57af50;
   color: white;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
+}
+
+.form-container input:focus {
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  padding: 0.4rem;
+}
+
+.form-container input {
+  width: 80%;
+  margin: 0.4rem;
+  padding: 0.2rem;
 }
 /*# sourceMappingURL=Form.css.map */
