--- a/client/src/components/HomePage/HomePage.scss
+++ b/client/src/components/HomePage/HomePage.scss
@@ -5,7 +5,10 @@
 }
 
 .recipe-icon {
-  margin-left: 0.5rem;
+  margin-left: 1rem;
+  position: relative;
+  top: .5rem;
+  color: rgb(240, 156, 0);
 }
 
 .homepage-link {
@@ -45,6 +48,7 @@
         }
 
         .latest-recipe-body {
+          padding: 1rem;
           .latest-recipe-title {
             h1 {
               font-size: 1.5rem;
@@ -99,6 +103,11 @@
 
   .random-one-container {
     margin-top: 5rem;
+    .random-one-img {
+      height: 500px;
+      background-size: 100%;
+      width: 100%; 
+    }
 
     .random-one-body {
       background-color: rgb(151, 65, 65);
@@ -117,19 +126,19 @@
         }
       }
     }
-  }
-
-  @media (min-width: 1000px) {
-    .random-one-body {
-      width: 80%;
-    }
-
-    .random-one-img {
-      height: 600px;
-      width: 50%;
-      margin: 0 5rem;
+    @media (min-width: 1000px) {
+      .random-one-body {
+        width: 80%;
+      }
+  
+      .random-one-img {
+        height: 600px;
+        width: 50%; 
+      }
     }
   }
+
+ 
 
   /* HUNGARIAN-FIVE-STYLES */
 
