--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,106 +1,116 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=IBM+Plex+Sans+Arabic:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Concert+One&family=IBM+Plex+Sans+Arabic:wght@200&display=swap");
+header .menu-toggle {
+  position: fixed;
+  right: 5px;
+  top: 5px;
+  z-index: 100;
+  height: 50px;
+  width: 50px;
+  font-size: 1.5rem;
+  opacity: 0.7;
+  color: black;
+  border: 1px solid #e0e0e0;
+  cursor: pointer;
+}
 
 nav {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background-color: white;
-    z-index: 99;
-    left: -100%;
-    top: 0;
-    transition: all .4s ease-in-out;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  z-index: 99;
+  left: -100%;
+  top: 0;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
-.nav-wrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+nav .nav-wrapper {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-
-.nav-wrapper ul {
-    list-style-type: none;
+nav ul {
+  list-style-type: none;
 }
 
-
-.nav-wrapper ul li .link {
-    text-decoration: none;
-    font-family: 'Concert One', cursive;
-    font-size: 3rem;
+nav ul li .link {
+  text-decoration: none;
+  font-family: "Concert One", cursive;
+  font-size: 3rem;
 }
 
+nav .log-buttons button {
+  color: white;
+  padding: 0.5rem 1.5rem;
+}
+
+nav .log-buttons .login {
+  background-color: #7599bb;
+}
+
+nav .log-buttons .logout {
+  background-color: #a76060;
+}
+
+nav .log-buttons .register {
+  background-color: #8560a7;
+}
 
 .active {
-    left: 0;
+  left: 0;
 }
-
-.menu-toggle {
-    position: fixed;
-    right: 5px;
-    top: 5px;
-    z-index: 100;
-    height: 50px;
-    width: 50px;
-    font-size: 1.5rem;
-    opacity: .7;
-    color: black;
-    border: 1px solid rgb(224, 224, 224);
-    cursor: pointer;
-}
-
-.log-buttons button {
-    color: white;
-    padding: .5rem 1.5rem;
-}
-
-.log-buttons .login {
-    background-color: rgb(117, 153, 187);
-}
-.log-buttons .logout {
-    background-color: rgb(167, 96, 96);
-}
-.log-buttons .register {
-    background-color: rgb(133, 96, 167);
-}
-
-
-
 
 @media (min-width: 768px) {
-    nav {
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 50px;
-        justify-content: space-between;
-    }
-    
-    .nav-wrapper {
-        max-width: 1200px;
-        margin: 0 auto;
-        height: 50px;
-        flex-direction: row;
-        justify-content: space-between;
-        border-bottom: 1px solid;
-    }
-
-
-    .menu-toggle {
-        display: none;
-    }
-
-    .nav-wrapper ul {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .nav-wrapper ul li .link {
-        font-size: 1.2rem;
-        margin: 0 1rem;
-    }
-    
+  header .menu-toggle {
+    display: none;
+  }
+  nav {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  nav .nav-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 50px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border-bottom: 1px solid;
+  }
+  nav .nav-wrapper ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  nav .nav-wrapper ul li .link {
+    font-size: 1.2rem;
+    margin: 0 1rem;
+  }
 }
+/*# sourceMappingURL=Nav.css.map */
