--- a/client/src/components/RatingStars/RatingStars.css
+++ b/client/src/components/RatingStars/RatingStars.css
@@ -1,55 +1,63 @@
-.rating-stars-header {
-  text-align: center;
-  margin: 1rem;
-}
-
-.rating-stars-header h1  {
-  margin-bottom: 1.5rem;
-  font-size: 2rem
-}
-
 .rating-stars-container {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background-color: white;
   color: black;
   width: 80%;
   padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   z-index: 101;
   border: 1px solid;
 }
 
-@media(min-width: 768px) {
+.rating-stars-container .rating-stars-header {
+  text-align: center;
+  margin: 1rem;
+}
+
+.rating-stars-container .rating-stars-header h1 {
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+}
+
+.rating-stars-container .rating-stars-btns {
+  margin: 1rem;
+}
+
+.rating-stars-container .rating-stars-btns .rating-stars-btn {
+  margin: 0 .5rem;
+  padding: .5rem 1rem;
+  color: white;
+  font-weight: bolder;
+}
+
+.rating-stars-container .rating-stars-btns .send-rating {
+  background-color: #5DA7DB;
+}
+
+.rating-stars-container .rating-stars-btns .close-rating {
+  background-color: orange;
+}
+
+@media (min-width: 768px) {
   .rating-stars-container {
     width: 50%;
     margin: 0 auto;
   }
 }
-
-.rating-stars-btns {
-  margin: 1rem;
-}
-
-.rating-stars-btn {
-  margin: 0 .5rem;
-  padding: .5rem 1rem;
-}
-
-.rating-stars-btn {
-  color: white;
-  font-weight: bolder;
-}
-
-.send-rating {
-  background-color: #5DA7DB;
-}
-
-.close-rating {
-  background-color: orange;
-}
+/*# sourceMappingURL=RatingStars.css.map */
